# medley

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
ide/: Cargo.toml
ide/src/: lib.rs  model.rs  view.rs
src/: ast.rs  emit.rs  lib.rs  view.rs
web/: Cargo.toml
web/src/: lib.rs
web/static/: index.html
