[package]
name = "medley-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
druid = "0.7.0"
medley-ide = { path = "../ide" }
wasm-bindgen = "0.2.74"
[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
]
[dependencies.winit]
version = "0.25.0"
features = ["web-sys"]
